Code for posterior distribution of outcome given the event has happened in an interval

--- a/report/decision_analytic/mdm/latex/bibliography.bib
+++ b/report/decision_analytic/mdm/latex/bibliography.bib
@@ -9,6 +9,50 @@
   publisher={Wiley Online Library}
 }
 
+@article{nieboer2018active,
+  title={Active surveillance: a review of risk-based, dynamic monitoring},
+  author={Nieboer, Daan and Tomer, Anirudh and Rizopoulos, Dimitris and Roobol, Monique J and Steyerberg, Ewout W},
+  journal={Translational andrology and urology},
+  volume={7},
+  number={1},
+  pages={106},
+  year={2018},
+  publisher={AME Publications}
+}
+
+@article{barnett2018optimizing,
+  title={Optimizing active surveillance strategies to balance the competing goals of early detection of grade progression and minimizing harm from biopsies},
+  author={Barnett, Christine L and Auffenberg, Gregory B and Cheng, Zian and Yang, Fan and Wang, Jiachen and Wei, John T and Miller, David C and Montie, James E and Mamawala, Mufaddal and Denton, Brian T},
+  journal={Cancer},
+  volume={124},
+  number={4},
+  pages={698--705},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{vickers2006decision,
+  title={Decision curve analysis: a novel method for evaluating prediction models},
+  author={Vickers, Andrew J and Elkin, Elena B},
+  journal={Medical Decision Making},
+  volume={26},
+  number={6},
+  pages={565--574},
+  year={2006},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{gentleman1994maximum,
+  title={Maximum likelihood for interval censored data: {Consistency} and computation},
+  author={Gentleman, Robert and Geyer, Charles J},
+  journal={Biometrika},
+  volume={81},
+  number={3},
+  pages={618--623},
+  year={1994},
+  publisher={Oxford University Press}
+}
+
 @article{fujita2009serial,
   title={Serial prostate biopsies are associated with an increased risk of erectile dysfunction in men with prostate cancer on active surveillance},
   author={Fujita, Kazutoshi and Landis, Patricia and McNeil, Brian K and Pavlovich, Christian P},
@@ -125,8 +169,6 @@ pages={525--529},
 year={1998},
 publisher={Elsevier}
 }
-
-
 
 @article{lopez2014optimalcutpoints,
 title={{OptimalCutpoints: an R package for selecting optimal cutpoints in diagnostic tests}},
