--- a/report/decision_analytic/mdm/latex/main_manuscript.tex
+++ b/report/decision_analytic/mdm/latex/main_manuscript.tex
@@ -25,7 +25,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 \title{Personalized Decision Making for Biopsies in Prostate Cancer Active Surveillance Programs}
 
-\author{Anirudh Tomer\affilnum{1}, Daan~Nieboer\affilnum{2}, Monique~J.~Roobol\affilnum{3}, Ewout~W.~Steyerberg\affilnum{2,4}, and Dimitris~Rizopoulos\affilnum{1}}
+\author{Anirudh Tomer\affilnum{1}, Dimitris~Rizopoulos\affilnum{1}, Daan~Nieboer\affilnum{2}, Frank-Jan~Drost\affilnum{3}, Monique~J.~Roobol\affilnum{3}, and Ewout~W.~Steyerberg\affilnum{2,4}}
 
 \affiliation{\affilnum{1}Department of Biostatistics, Erasmus University Medical Center, the Netherlands\\
 \affilnum{2}Department of Public Health, Erasmus University Medical Center, the Netherlands\\
@@ -47,7 +47,7 @@ the Netherlands.}
 
 \maketitle
 
-\footnote{Financial support for this study was provided Netherlands Organization for Scientific Research's VIDI grant nr. 016.146.301, and Erasmus MC funding. The funding agreement ensured the authors’ independence in designing the study, interpreting the data, writing, and publishing the report.\\Word count: 3728}
+\footnote{Financial support for this study was provided Netherlands Organization for Scientific Research's VIDI grant nr. 016.146.301, and Erasmus MC funding. The funding agreement ensured the authors’ independence in designing the study, interpreting the data, writing, and publishing the report.\\Word count: 3972}
 \thefootnote
 
 \input{mainmatter/introduction}
