--- a/report/decision_analytic/mdm/latex/mainmatter/acknowledgement.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/acknowledgement.tex
@@ -1,5 +1,5 @@
 % !TEX root =  ../main_manuscript.tex 
 
 \begin{acks}
-The first and last authors would like to acknowledge support by the Netherlands Organization for Scientific Research's VIDI grant nr. 016.146.301, and Erasmus MC funding. The authors also thank the Erasmus MC Cancer Computational Biology Center for giving access to their IT-infrastructure and software that was used for the computations and data analysis in this study. Lastly, we thank Frank-Jan H. Drost from the Department of Urology, Erasmus University Medical Center, for helping us in accessing the PRIAS data set.
+The first and last authors would like to acknowledge support by the Netherlands Organization for Scientific Research's VIDI grant nr. 016.146.301, and Erasmus MC funding. The authors also thank the Erasmus MC Cancer Computational Biology Center for giving access to their IT-infrastructure and software that was used for the computations and data analysis in this study. Lastly, we thank Joost Van Rosmalen from the Department of Biostatistics, Erasmus University Medical Center, for feedback on the manuscript.
 \end{acks}
