--- a/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
@@ -1,13 +1,12 @@
 % !TEX root =  ../main_manuscript.tex
-
 \section{Discussion}
 \label{sec:discussion}
-In this paper we proposed a personalized methodology for making decisions for prostate cancer biopsies in active surveillance (AS) programs. Our methodology uses the entire history of prostate-specific antigen (PSA) levels and digital rectal examination (DRE) scores, and results of the latest biopsy, of each patient at each follow-up visit, to make a decision of biopsy at that visit. To this end, it utilizes joint models for time-to-event and longitudinal data. Using joint models, our method combines the observed data of a patient, into a personalized cancer progression risk profile. It schedules a biopsy if the cumulative risk of cancer progression at a follow-up visit is above a certain threshold.
+In this paper, we proposed a methodology for making personalized biopsy decisions for prostate cancer patients included in active surveillance (AS) programs. Our goal was to better balance the number of biopsies, and the delay in detection of cancer progression, than existing biopsy schedules. The proposed methodology combines a patient's observed DRE and PSA measurements, and the time of latest biopsy, into a cancer progression risk function. If the cumulative risk of cancer progression at a follow-up visit is above a certain threshold, then a biopsy is scheduled. We conducted a simulation study to compare the personalized approach for biopsies with the currently practiced fixed/heuristic biopsy schedules common for all patients, and the PRIAS schedule (see \hyperref[sec:introduction]{Introduction}). We found that the personalized schedule which uses 10\% risk threshold at all follow-up visits is dominant over the PRIAS schedule, biennial schedule of biopsies, and biopsies every one and a half years. This personalized schedule not only schedules less number of biopsies than the aforementioned currently practiced schedules, but the delay in detection of cancer progression is also either equal or less. The personalized schedule which uses risk threshold chosen on the basis of classification accuracy ($\mbox{F}_1$ score) is dominant over the triennial schedule of biopsies. The personalized schedule which uses 5\% risk threshold schedules less biopsies than the annual schedule, while the delay is only trivially more than the annual schedule. These results conclude that the personalized schedules better balance the number of biopsies, and the delay in detection of cancer progression than the currently practiced schedules.
 
-The proposed personalized method has the following advantages over the in-practice fixed/heuristic schedules \citep{loeb2014heterogeneity,inoue2018comparative} of biopsies. Firstly, it accounts for varying cancer progression speeds of each patient. In contrast fixed/heuristic schedules, use a common schedule for all patients, which leads to many unnecessary biopsies in the case of \textit{slow progressing} (almost 50\% of all patients, see \hyperref[sec:results]{Results}) patients. Secondly, by providing urologists and patients an estimate of the risk of cancer progression, a more informed decision of biopsy can be made. The personalized method also has advantages over the in-practice PRIAS schedule of the world's largest AS program PRIAS. In PRIAS, the PSA profiles of patients are modeled linearly over time, which is contrary to observed PSA profiles of the patients (see Figure~6 in Appendix B). Consequently, PRIAS' method of scheduling more biopsies for only the \textit{fast progressing} patients, may not always correctly identify \textit{fast progressing} patients. To this end, we assume a non-linear profile for PSA, and utilize the complete observed data (historical PSA and DRE, time of latest biopsy) to develop the risk function (see Equation~\ref{eq:dynamic_risk_prob}), which is finer quantitative measure.
+The main reason for better performance of personalized schedules is that they account for the variation in cancer progression rate between patients, and also over time within the same patient. In contrast, the existing fixed/heuristic schedules ignore that roughly 50\% patients never progress in the first ten years of follow-up (\textit{slow progressing} patients) and do not require biopsies. While \textit{fast progressing} patients require early detection, but existing methods of identifying these patients, such as the use of PSA doubling time in PRIAS, inappropriately assume that PSA evolves linearly over time. Thus, they may not correctly identify such patients. The personalized approach however, models the PSA profiles non-linearly. Furthermore, it appends information from PSA with information from DRE and previous biopsy results, and combines them into a cancer progression risk function. The risk function is a finer quantitative measure than individual data measurements observed for the patients. Risk is also easy to understand for both patients and doctors. Consequently, we expect that a more informed decision of biopsy can be made. 
 
-We compared the personalized approach with the in-practice biopsy schedules, by conducting a realistic and extensive simulation study. We evaluated the biopsy schedules on the basis of the number of biopsies they schedule, and the corresponding delay in detection of cancer progression. From the simulation study we found that both the personalized and PRIAS schedules provide much better balance between the number of biopsies and delay in detection of progression, than the fixed/heuristic approaches (see Figure~\ref{fig:better_balance_results}). Since, we conducted a simulation study, we are able to retrospectively check the impact of different schedules on patients with different speeds of cancer progression. In this regard, we observed that the commonly used annual schedule puts the highest burden on the \textit{slow progressing} patients (see Figure~\ref{fig:sim_res_combined}), by scheduling ten biopsies for each such patient. The PRIAS schedule, despite its effort to identify such patients using PSA doubling time, schedules a minimum of four and a median of six unnecessary biopsies for them. In contrast, the personalized biopsy decision making approach reduces it to a median of two to four biopsies depending upon the choice of the risk threshold. 
+Existing work on mitigating the issue of non-compliance of biopsies and/or reducing the burden of biopsies in AS, primarily advocates less frequent schedule of biopsies. To our knowledge, risk based biopsy schedules have not been explored yet in AS \cite{nieboer2018active}. However, the results that we estimated for fixed/heuristic schedules are comparable with corresponding results obtained in existing work \cite{inoue2018comparative}, even though the AS cohorts are not same. Unless the cohorts differ significantly in patient population, the results for personalized schedules may also be valid in other cohorts. 
 
-In this regard, a personalized approach with a 10\% risk threshold has a similar delay in detection of cancer progression as PRIAS, and it schedules less biopsies (see Figure~\ref{fig:sim_res_combined}). While, it may seem attractive for clinical use, but in light of the non-compliance results \citep{bokhorst2015compliance}, prescribing the same threshold to all patients may not be suitable. Patients have varying tolerance for the number of biopsies, and apprehensions about the delay in detection of cancer progression. Both of these must be considered while making the choice of a risk threshold. Furthermore, the choice should not be made only on the basis of point estimates such as median number of biopsies and/or median delay. Instead, measures of variance (see Figure~\ref{fig:sim_res_combined}) of both quantities should also be considered.
+A limitation of the personalized approach is that the choice of risk threshold is not straightforward, as different thresholds lead to different combinations of number of biopsies and delay in detection of cancer progression. An approach is to choose a risk threshold which leads to personalized schedule dominant over the currently practiced schedules, for a given delay. Although dominance may not guarantee compliance, it may be likely, because personalized schedules are less burdensome. A second limitation is that the results that we presented are valid only in a 10 year follow-up period, whereas prostate cancer is a slow progressing disease. Thus more detailed results, especially for \textit{slow progressing} patients cannot be estimated. However, very few AS cohorts have a longer follow-period than PRIAS. Another limitation of risk based personalized schedules is that the biopsy decisions do not optimize for a reward/penalty function. While the risk itself can be interpreted as a ratio of immediate reward/penalty of biopsies \cite{vickers2006decision}, but future rewards/penalties need to considered as well.
 
-A limitation of our results is that, even if they are based on the world's largest AS program, other AS programs may differ in the patient characteristics\cite{inoue2018comparative}. In this regard, a simulation study based on a multi-center cohort is required. Currently, the follow-up of period of our study is ten years. More detailed results, especially for \textit{slow progressing} patients, can be obtained using a cohort having a longer follow-up period. Since Biopsy Gleason grading is susceptible to inter-observer variation \cite{Gleason_interobs_var}, accounting for it in our model will also be interesting to investigate further. There is also potential for including diagnostic information from magnetic resonance imaging (MRI) in our model. Lastly, considering quality of life measures while discussing utility of each personalized approach may also lead to better decision making. However, given the scarceness of such information in the dataset, including it in the current model may not be feasible.
+There are multiple ways to extend the personalized decision making approach. One such way is to account for competing risks (see \hyperref[subsec:study_population]{Study Population}) in the joint model. Since biopsy Gleason grading is susceptible to inter-observer variation \cite{Gleason_interobs_var}, accounting for it in our model will also be interesting to investigate further. To improve the decision making methodology, future consequences of a biopsy can be accounted in the model by combining Markov decision processes with joint models for time-to-event and longitudinal data. There is also potential for including diagnostic information from magnetic resonance imaging (MRI), and quality of life measures in our model. However, given the scarceness of such information in the dataset, including it in the current model may not be feasible. Lastly, we intend to further validate our results in a multi-center AS cohort, and subsequently develop a web-application to assist doctors in making personalized decisions for biopsies.
