--- a/report/decision_analytic/mdm/latex/supplementary/full_results.tex
+++ b/report/decision_analytic/mdm/latex/supplementary/full_results.tex
@@ -10,7 +10,7 @@ In the simulation study, we evaluate the following in-practice fixed/heuristic a
 \Hline
 In-practice schedules & $\mbox{Q}^{\mbox{nb}}_1$ & $\mbox{Q}^{\mbox{nb}}_2$ & $\mbox{Q}^{\mbox{nb}}_3$ & $\mbox{Q}^{\mbox{delay}}_1$  & $\mbox{Q}^{\mbox{delay}}_2$  & $\mbox{Q}^{\mbox{delay}}_3$ \\
 \hline
-Every year (Annual)         & 3  & 10 & 10 & 0.3 & 0.5 & 0.8 \\
+Every year (annual)         & 3  & 10 & 10 & 0.3 & 0.5 & 0.8 \\
 Every 1.5 years      & 2  & 7  & 7  & 0.4 & 0.7 & 1.1 \\
 Every 2 years       & 2  & 5  & 5  & 0.6 & 1.1 & 1.5 \\
 Every 3 years      & 1  & 4  & 4  & 1.1 & 1.8 & 2.3 \\
@@ -35,7 +35,7 @@ Since patients have varying cancer progression speeds, the impact of each schedu
 \Hline
 In-practice schedules     & $\mbox{Q}^{\mbox{nb}}_1$ & $\mbox{Q}^{\mbox{nb}}_2$ & $\mbox{Q}^{\mbox{nb}}_3$ & $\mbox{Q}^{\mbox{delay}}_1$  & $\mbox{Q}^{\mbox{delay}}_2$  & $\mbox{Q}^{\mbox{delay}}_3$ \\
 \hline
-Every year (Annual)         & 1  & 2  & 2  & 0.3 & 0.6 & 0.9 \\
+Every year (annual)         & 1  & 2  & 2  & 0.3 & 0.6 & 0.9 \\
 Every 1.5 years      & 1  & 1  & 2  & 0.4 & 0.8 & 1.2 \\
 Every 2 years       & 1  & 1  & 1  & 0.7 & 1.1 & 1.5 \\
 Every 3 years      & 1  & 1  & 1  & 1.5 & 2.0   & 2.5 \\
@@ -58,7 +58,7 @@ Risk using $\mbox{F}_1$ score & 1  & 1  & 2  & 0.5 & 0.9 & 2.0   \\
 \Hline
 In-practice schedules     & $\mbox{Q}^{\mbox{nb}}_1$ & $\mbox{Q}^{\mbox{nb}}_2$ & $\mbox{Q}^{\mbox{nb}}_3$ & $\mbox{Q}^{\mbox{delay}}_1$  & $\mbox{Q}^{\mbox{delay}}_2$  & $\mbox{Q}^{\mbox{delay}}_3$ \\
 \hline
-Every year (Annual)         & 5  & 7  & 8  & 0.2 & 0.5 & 0.7 \\
+Every year (annual)         & 5  & 7  & 8  & 0.2 & 0.5 & 0.7 \\
 Every 1.5 years      & 4  & 5  & 6  & 0.3 & 0.7 & 1.0   \\
 Every 2 years       & 3  & 4  & 4  & 0.4 & 1.0   & 1.5 \\
 Every 3 years      & 2  & 3  & 3  & 0.6 & 1.3 & 2.0  \\
@@ -81,7 +81,7 @@ Risk using $\mbox{F}_1$ score & 2  & 3  & 5  & 0.5 & 1.0   & 2.4 \\
 \Hline
 In-practice schedules     & $\mbox{Q}^{\mbox{nb}}_1$ & $\mbox{Q}^{\mbox{nb}}_2$ & $\mbox{Q}^{\mbox{nb}}_3$ & $\mbox{Q}^{\mbox{delay}}_1$  & $\mbox{Q}^{\mbox{delay}}_2$  & $\mbox{Q}^{\mbox{delay}}_3$ \\
 \hline
-Every year (Annual)         & 10 & 10 & 10 &   &   &   \\
+Every year (annual)         & 10 & 10 & 10 &   &   &   \\
 Every 1.5 years      & 7  & 7  & 7  &   &   &   \\
 Every 2 years       & 5  & 5  & 5  &   &   &   \\
 Every 3 years      & 4  & 4  & 4  &   &   &  \\
